/*
 *
 * Copyright 2018 gRPC authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

syntax = "proto3";

//package grpc.examples.echo;

//option go_package = "google.golang.org/grpc/examples/features/proto/echo";

message Request {
  string method = 1; //request func name
  string params = 2; //request params for json string
}

message Response {
  string result = 1; //json string format
}

service Call {
  rpc Call(Request) returns (Response) {}
  rpc ServerStreamingCall(Request) returns (stream Response) {}
  rpc ClientStreamingCall(stream Request) returns (Response) {}
  rpc BidirectionalStreamingCall(stream Request) returns (stream Response) {}
}
